Fix header visibility

--- a/wp-content/themes/academyAfrica/assets/css/src/components/_header.scss
+++ b/wp-content/themes/academyAfrica/assets/css/src/components/_header.scss
@@ -57,8 +57,9 @@
     }
 
     .desktop {
-        @include media-breakpoint-down(desktop) {
-            display: none;
+        display: none;
+        @include media-breakpoint-up(desktop) {
+            display: block;
         }
 
         .nav {
